@@ -6,8 +6,8 @@ print.gexf <- function(x, file=NA, replace=F, ...) {
     cat(x)
   }
   else {
-    output <- file(description=file,encoding='UTF-8')
-    cat(x, file=output,...)
+    output <- file(description=file,open="w",encoding='UTF-8')
+    write(x, file=output,...)
     close.connection(output)
   }
 }
