@@ -2,6 +2,15 @@
 \title{rgexf NEWS}
 \encoding{UTF-8}
 
+\section{CHANGES IN rgexf version 0.12.03.29 [2012-03-29]}{
+  \subsection{FIXES}{
+    \itemize{
+      \item Fixing big misscoding at attvalues XML tag: it was replaced from "att" to "attvalue".
+      \item Fixing problem with XML value printing: Leading speces where removed from XML values at ids, source, target, etc.
+    }
+  }
+}
+
 \section{CHANGES IN rgexf version 0.12.03 [2012-03-05]}{
   \subsection{NEW FEATURES}{
     \itemize{
